legacy/useful/deployed/ingress-nginx/dash-ingress-tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Add https backend protocol support for ingress-nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # some crazy filtering required to make an SPA work on a non root URL
    nginx.ingress.kubernetes.io/configuration-snippet: |
      sub_filter_once off;
      sub_filter '<head>' '<head> <base href="dashboard/">';
      sub_filter 'src="/' 'src="/dashboard/';
      sub_filter 'href="/' 'href="/dashboard/';

      proxy_set_header Origin "";
      proxy_set_header Accept-Encoding "";
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules: 
  - host: gilesk.ddns.net
    http:
      paths:
        - path: /dashboard(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: dashboard-release-kubernetes-dashboard
              port:
                number: 443
  tls:
  - hosts:
    - gilesk.ddns.net
    secretName: gilesk.ddns.net-tls
