legacy/useful/deployed/ingress-nginx/dash-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    # todo rewrite of the target does not seem to work for dashboard
    # (get a blank web page)
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  # a local dns name for one of my worker nodes 
  - host: nuc1.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dashboard-release-kubernetes-dashboard
              port:
                number: 443        
  # a public dns name for one of my worker nodes    
  - host: gilesk.ddns.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dashboard-release-kubernetes-dashboard
              port:
                number: 443
